changed webserver settings

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,12 +5,12 @@
       "label": "docker start fresh run all",
       "detail": "clean and restart",
       "dependsOrder": "sequence",
-      "dependsOn": ["docker purge system", "docker build all images", "docker lift all containers"],
+      "dependsOn": ["docker compose down", "docker compose build", "docker compose up"],
       "presentation": { "echo": true, "panel": "shared", "showReuseMessage": true, "clear": false, "reveal": "always", "focus": true },
       "problemMatcher": [],
     },
     {
-      "label": "docker clean system",
+      "label": "docker compose down",
       "type": "shell",
       "detail": "cleans system",
       "command": "source ${workspaceFolder}/utilities/docker/clean.sh",
@@ -18,7 +18,7 @@
       "problemMatcher": [],
     },
     {
-      "label": "docker build all images",
+      "label": "docker compose build",
       "type": "shell",
       "detail": "builds image from Dockerfile",
       "command": "source ${workspaceFolder}/utilities/docker/build.sh",
@@ -26,17 +26,17 @@
       "presentation": { "echo": true, "panel": "shared", "showReuseMessage": true, "clear": false, "reveal": "always", "focus": true },
     },
     {
-      "label": "docker lift all containers",
+      "label": "docker compose up",
       "type": "shell",
-      "detail": "lift all containers",
+      "detail": "compose up all containers",
       "command": "source ${workspaceFolder}/utilities/docker/lift_up.sh",
       "presentation": { "echo": true, "panel": "shared", "showReuseMessage": true, "clear": false, "reveal": "always", "focus": true },
       "problemMatcher": [],
     },
     {
-      "label": "docker push to docker hub",
+      "label": "docker push images",
       "type": "shell",
-      "detail": "docker push to dockerhub",
+      "detail": "push images to dockerhub",
       "command": "source ${workspaceFolder}/utilities/docker/push.sh",
       "presentation": { "echo": true, "panel": "shared", "showReuseMessage": true, "clear": false, "reveal": "always", "focus": true },
       "problemMatcher": [],
