--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,5 @@
 {
-  // 
-  "codedeploy.applicationName": "seesee",
-  "codedeploy.region": "us-east-1",
-  "codedeploy.isApplicationWorkspace": true,
-  // 
+  // seesee lightsail rsync
   "sync-rsync.sites": [
     {
       "name": "seesee",
@@ -11,7 +7,6 @@
       "deleteFiles": true,
       "localPath": "/home/dany/projects/github/seesee/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee",
-      // "include": [],
       "exclude": [
         "**/.git",
         "**/.vscode",
@@ -28,6 +23,10 @@
       ],
     },
   ],
-  // 
+  // aws code deploy
+  "codedeploy.applicationName": "seesee",
+  "codedeploy.region": "us-east-1",
+  "codedeploy.isApplicationWorkspace": true,
+  // favorites storage location
   "favorites.storageFilePath": "../../working/.favorites.json",
 }
