--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,6 @@
     {
       "name": "seesee",
       "upOnly": true,
-      "deleteFiles": true,
       "localPath": "/home/dany/projects/github/seesee/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee",
       "exclude": [
@@ -20,6 +19,7 @@
         "**/utilities/release",
         "**/docker-compose.test.yml",
         "**/node_modules",
+        "**/dhparam"
       ],
     },
   ],
