--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,68 @@ services:
   # ==========================================#
 
   node_sample:
+    image: node_sample
+    container_name: node_sample
     build:
       context: ./services/sample/
       dockerfile: Dockerfile
-    image: node_sample
-    container_name: node_sample
     restart: unless-stopped
     networks:
       - app_network
+
+  # ==========================================#
+  #  services/users                           #
+  # ==========================================#
+
+  # users_service:
+  #   container_name: users_service
+  #   build:
+  #     context: ./services/users/
+  #     dockerfile: Dockerfile
+  #   environment:
+  #     - DB_URI=mysql://root:password@users_service_db/db?charset=UTF8
+  #   depends_on:
+  #     - users_service_db
+
+  # ==========================================#
+  #  services/users:data                      #
+  # ==========================================#
+
+  # users_service_db:
+  #   container_name: users_service_db
+  #   image: mysql:5.7.20
+  #   environment:
+  #     - MYSQL_ROOT_PASSWORD=password
+  #     - MYSQL_DATABASE=db
+  #   ports:
+  #     - "7201:3306"
+
+  # ==========================================#
+  #  services/listings                        #
+  # ==========================================#
+
+  # listings_service:
+  #   container_name: listings_service
+  #   build:
+  #     context: ./services/listings/
+  #     dockerfile: Dockerfile
+  #   environment:
+  #     - DB_URI=mysql://root:password@listings_service_db/db?charset=UTF8
+  #   depends_on:
+  #     - listings_service_db
+
+  # ==========================================#
+  #  services/listings:data                   #
+  # ==========================================#
+
+  # listings_service_db:
+  #   container_name: listings_service_db
+  #   image: mysql:5.7.20
+  #   environment:
+  #     - MYSQL_ROOT_PASSWORD=password
+  #     - MYSQL_DATABASE=db
+  #   ports:
+  #     - "7200:3306"
 
   # ==========================================#
   #  nginx_proxy                              #
@@ -24,16 +78,18 @@ services:
     container_name: nginx_proxy
     restart: unless-stopped
     ports:
-      - 80:80
-      - 443:443
+      - "80:80"
+      # - "443:443"
     volumes:
       - web_root:/var/www/html
-      - ./services/nginx/:/etc/nginx/conf.d
+      - ./services/nginx:/etc/nginx/conf.d
       - certbot_etc:/etc/letsencrypt
       - certbot_var:/var/lib/letsencrypt
-      - dhparam:/etc/ssl/certs
+      # - dhparam:/etc/ssl/certs
     depends_on:
       - node_sample
+      # - users_service
+      # - listings_service
     networks:
       - app_network
       
@@ -50,66 +106,8 @@ services:
       - web_root:/var/www/html
     depends_on:
       - nginx_proxy
-    command: certonly --webroot --webroot-path=/var/www/html --email dany@dany.codes --agree-tos --no-eff-email --force-renewal -d seesee.space  -d www.seesee.space
-
-
- # ==========================================#
-  #  services/users                           #
-  # ==========================================#
-
-  users_service:
-    container_name: users_service
-    build:
-      context: ./services/users/
-      dockerfile: Dockerfile
-    environment:
-      - DB_URI=mysql://root:password@users_service_db/db?charset=UTF8
-    # ports:
-    #   - 7101:7101
-    depends_on:
-      - users_service_db
-
-  # ==========================================#
-  #  services/users:data                      #
-  # ==========================================#
-
-  users_service_db:
-    container_name: users_service_db
-    image: mysql:5.7.20
-    environment:
-      - MYSQL_ROOT_PASSWORD=password
-      - MYSQL_DATABASE=db
-    ports:
-      - 0.0.0.0:7201:3306
-
-  # ==========================================#
-  #  services/listings                        #
-  # ==========================================#
-
-  listings_service:
-    container_name: listings_service
-    build:
-      context: ./services/listings/
-      dockerfile: Dockerfile
-    environment:
-      - DB_URI=mysql://root:password@listings_service_db/db?charset=UTF8
-    # ports:
-    #   - 7100:7100
-    depends_on:
-      - listings_service_db
-
-  # ==========================================#
-  #  services/listings:data                   #
-  # ==========================================#
-
-  listings_service_db:
-    container_name: listings_service_db
-    image: mysql:5.7.20
-    environment:
-      - MYSQL_ROOT_PASSWORD=password
-      - MYSQL_DATABASE=db
-    ports:
-      - 0.0.0.0:7200:3306
+    command: certonly --webroot --webroot-path=/var/www/html --email dany@dany.codes --agree-tos --no-eff-email --staging -d seesee.space  -d www.seesee.space
+    # command: certonly --webroot --webroot-path=/var/www/html --email dany@dany.codes --agree-tos --no-eff-email --force-renewal -d seesee.space  -d www.seesee.space
 
   # rabbitmq:
   #   container_name: rabbitmq
@@ -179,7 +177,7 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: /home/ubuntu/seesee/certs/dhparam/
+      device: /home/ubuntu/seesee/subscribers/certbot/dhparam/
       o: bind
   
 # ==========================================#
