--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,11 @@ services:
   # ==========================================#
 
   node_sample:
-    image: node_sample
-    container_name: node_sample
     build:
       context: ./services/sample/
       dockerfile: Dockerfile
+    image: node_sample
+    container_name: node_sample
     restart: unless-stopped
     networks:
       - app_network
@@ -79,17 +79,15 @@ services:
     restart: unless-stopped
     ports:
       - "80:80"
-      # - "443:443"
+      - "443:443"
     volumes:
       - web_root:/var/www/html
       - ./services/nginx:/etc/nginx/conf.d
       - certbot_etc:/etc/letsencrypt
       - certbot_var:/var/lib/letsencrypt
-      # - dhparam:/etc/ssl/certs
+      - dhparam:/etc/ssl/certs
     depends_on:
       - node_sample
-      # - users_service
-      # - listings_service
     networks:
       - app_network
       
@@ -106,8 +104,8 @@ services:
       - web_root:/var/www/html
     depends_on:
       - nginx_proxy
-    command: certonly --webroot --webroot-path=/var/www/html --email dany@dany.codes --agree-tos --no-eff-email --staging -d seesee.space  -d www.seesee.space
-    # command: certonly --webroot --webroot-path=/var/www/html --email dany@dany.codes --agree-tos --no-eff-email --force-renewal -d seesee.space  -d www.seesee.space
+    # command: certonly --webroot --webroot-path=/var/www/html --email dany@dany.codes --agree-tos --no-eff-email --staging -d seesee.space  -d www.seesee.space
+    command: certonly --webroot --webroot-path=/var/www/html --email dany@dany.codes --agree-tos --no-eff-email --force-renewal -d seesee.space  -d www.seesee.space
 
   # rabbitmq:
   #   container_name: rabbitmq
@@ -177,7 +175,7 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: /home/ubuntu/seesee/subscribers/certbot/dhparam/
+      device: /home/ubuntu/seesee/services/nginx/certbot/dhparam/
       o: bind
   
 # ==========================================#
