--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -1,4 +1,28 @@
 
+# Basci no-ssl server block
+
+# server {
+
+#   listen 80;
+#   listen [::]:80;
+
+#   root /var/www/html;
+#   index index.html index.htm index.nginx-debian.html;
+
+#   server_name seesee.space www.seesee.space;
+
+#   location / {
+#     proxy_pass http://node_sample:8080;
+#   }
+
+#   location ~ /.well-known/acme-challenge {
+#     allow all;
+#     root /var/www/html;
+#   }
+
+# }
+
+
 # This server block will allow us to start the Nginx container as a reverse proxy, 
 # which will pass requests to our Node application container. It will also allow us 
 # to use Certbot’s webroot plugin to obtain certificates for our domain. This plugin 
