--- a/gateway/client/Dockerfile
+++ b/gateway/client/Dockerfile
@@ -1,15 +1,35 @@
 FROM node:14
 
-WORKDIR /usr/src/app
+RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
 
-COPY package.json .
+WORKDIR /home/node/app
+
+COPY package.json ./
+
+USER node
 
 RUN yarn
 
-COPY . .
+COPY --chown=node:node . .
 
 RUN yarn run build
 
 EXPOSE 3000
 
 CMD yarn watch
+
+# FROM node:14
+
+# WORKDIR /usr/src/app
+
+# COPY package.json .
+
+# RUN yarn
+
+# COPY . .
+
+# RUN yarn run build
+
+# EXPOSE 3000
+
+# CMD yarn watch
