--- a/gateway/client/package.json
+++ b/gateway/client/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "webpack --progress",
     "deploy": "node-deploy $(pwd)",
-    "watch": "node_modules/.bin/babel-watch -L src/index.js",
+    "watch": "babel-watch -L src/index.js",
     "linkall": "yarn link node-deploy"
   },
   "dependencies": {
